Fix to mobile layout not fitting precisely

--- a/src/assets/styles/stylesheets/layout.scss
+++ b/src/assets/styles/stylesheets/layout.scss
@@ -8,9 +8,6 @@
   }
 }
 
-.container.wide {
-}
-
 .hero-background {
   background-image: url('../../images/hero-image.jpg');
   height: 95vh;
